--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
 pandas
 numpy
-scikit-learn
-python-Levenshtein
-fuzzywuzzy
 matplotlib
-pyreadstat
 plotly
+requests
+openai
+pdfplumber
+pyreadstat
